[package]
name = "virolai"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde", "qtty/serde"]

[dependencies]
petgraph = "0.8.3"
qtty = "0.3.0"
thiserror = "2.0"
uuid = { version = "1.21", features = ["v4"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
